<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">tugas 2</string>
    <string name="paragraph1">
            tirto.id - Seorang tokoh terpandang di satu perkampungan Kedoya Selatan, Jakarta Barat, menyangkal kehadiran SARS-CoV-2, virus penyebab COVID-19, telah menjangkiti dunia. Sampai pandemi sudah berjalan setahun terakhir, pria berusia 53 tahun ini masih meyakini COVID-19 “sama saja dengan flu biasa”. Ia menyalahkan orang-orang mempercayai virus ini yang “responsnya berlebihan banget.”
    </string>
    <string name="paragraph2">
        “Tutup warung, lah. Usaha, lah. Jadinya malah kesulitan,” keluhnya, yang menyambut ramah kedatangan saya pada pekan ketiga Februari lalu. Tak sulit menemuinya. Rumah lantai dua miliknya berdiri mencolok bercat merah muda. Warga sekitar melintasi depan rumah menyapanya dengan panggilan ‘Pak Haji’.
        “Kalau enggak di rumah,” katanya membuka obrolan, “saya ke gudang dekat sini buat ngecek-ngecek.”
    </string>
    <string name="paragraph3">
        Warga menghormatinya bukan hanya karena dia pernah ke Mekkah, tapi juga dia pengusaha garmen. Bisnis ini telah digelutinya sejak 15 tahun lalu; dia punya satu gudang dan puluhan pekerja dari lingkungan dekat rumahnya.
    </string>
    <string name="paragraph4">
        Bisnis ini harusnya lancar, tapi pandemi COVID-19 telah mengubah peruntungannya sebagaimana juga membuat kalang kabut hajat hidup banyak orang. Usahanya kolaps; dia terpaksa merumahkan setengah pekerjanya.
    </string>
    <string name="paragraph5">
        “Untungnya sekarang bisnis sudah pelan-pelan membaik walaupun masih terbatas,” kata pria asal Cirebon ini. “Pekerja sudah saya tarik kembali ke gudang.”

Baca selengkapnya di artikel "Menyelami Isi Pikiran Penganut Konspirasi Anti-COVID dan Anti-Vaksin", https://tirto.id/gapS
    </string>
</resources>